# FixedPointLDPC

./: .ArrayLDPCMacro.h.swp  .cproject  .gitignore  .project  ArrayLDPC.cpp  ArrayLDPC.h  ArrayLDPCMacro.h  ArrayLDPCMacro_old.h  ArrayLDPC_Decoder.cpp  ArrayLDPC_Encoder.cpp  CMakeLists.txt  H2212_316_array_cut79.txt  H_802.11_IndZero.txt  H_802.11_IndZerog.txt  H_array_2209_235_old.txt  Makefile  Memory.cpp  Memory.h  MemoryMacro.h  NOTE_TC  PerfTest.cpp  PerfTest.h  Wrapper.cpp  column_flag.txt  fpldpc  makefile  makefile_bak  rngs.cpp  rvgs.cpp  wifi_infoindx.txt  wifi_results_4_4_2dB_30iter.txt
codes/: G_array.txt  G_array_forward.txt  G_trim_and_H.mat  G_trim_and_H_indx.mat  H_array_p47_r24_forward.txt  H_array_p47_r5.txt  H_array_p47_r5_forward.txt  H_array_p47_r5g.txt  H_array_p47_r5g_bin.txt  alist_from_arraycode.asv  alist_from_arraycode.m  alist_to_binary.m  binary_rank.m  check_g.m  column_flag_arrary_p47_r5_old.txt  simplfy_generator_alist.asv  simplfy_generator_alist.m
expbranch_ref/: ArrayLDPC_Decoder.cpp  PerfTest.cpp  PerfTest.h
